[package]
name = "thou"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rusb = { version = "0.9.4", features = ["serde", "vendored"] }

[profile.dev]
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
split-debuginfo = "off"
strip = "none"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
split-debuginfo = "unified"
strip = "symbols"
